# smogon-sample-teams

./: .gitignore  README.md  pyproject.toml
app/: addteam.py  loadenv.py  main.py  queries.py
app/pokeparser/: parser.py  utils.py
pokepaste-parser/: parser.py
